src/objects/FSTR__PCE_Step__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Parent_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Step</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Invalid Parent Step: Step Type of Parent Step does not allow child Steps, the Parent Step is not a part of this Definition, or the Parent Step cannot be the same as the current Step.</errorMessage>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.FSTR__Definition__c</valueField>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Field_Update__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Email_Alert__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Chatter_Notification__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Document_Merge__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.FSTR__Step_Type__c</field>
                <operation>notEqual</operation>
                <value>Clause Bundle</value>
            </filterItems>
            <filterItems>
                <field>FSTR__PCE_Step__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Parent Step must be from the same definition, Parent Step cannot be the current Step, and Parent Step cannot be the following types: Update Records, Generate Document, Send Email, Post to Chatter, or Clause Bundle.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Steps (Parent Step)</relationshipLabel>
        <relationshipName>Child_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Perform_Callout_On__c</fullName>
        <description>Select when to perform the callout.</description>
        <inlineHelpText>When the callout is performed; i.e. on Create, Update, and/or Close of the Step object.</inlineHelpText>
        <label>Perform Callout On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                    <default>true</default>
                    <label>Create</label>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Platform_Event_Object__c</fullName>
        <label>Platform Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Queue__c</fullName>
        <inlineHelpText>This is the queue that an object will be assigned to if assignee type is set to queue.</inlineHelpText>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Reassignment_Count__c</fullName>
        <label>Reassignment Count</label>
        <summaryForeignKey>FSTR__PCE_Step_Reassignment__c.FSTR__PCE_Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Recalled_Status__c</fullName>
        <label>Recalled Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Reevaluate_When__c</fullName>
        <label>Reevaluate When</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                    <label>--None--</label>
                </value>
                <value>
                    <fullName>Process Object Changes</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Rejection_Action__c</fullName>
        <label>Rejection Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continue</fullName>
                    <default>true</default>
                    <label>Continue</label>
                </value>
                <value>
                    <fullName>Go Back</fullName>
                </value>
                <value>
                    <fullName>Stop Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Rejection_Status__c</fullName>
        <inlineHelpText>If a task is rejected, the task is set to the selected status.</inlineHelpText>
        <label>Rejection Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Role__c</fullName>
        <inlineHelpText>This field indicates the role that this step is assigned to.  When a process is executed and the step assignee type is role this field determines which role this step is assigned to.</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__SendGridEmailSender__c</fullName>
        <label>SendGrid Email Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__SendGridEmailTemplateId__c</fullName>
        <description>For SendGrid integrations. Template id used for this email.</description>
        <label>SendGrid Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__SendGridEmailTemplateName__c</fullName>
        <label>SendGrid Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Skip_if_Past_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked the Step will not be created if the calculated due date results in a date earlier than the current day.</inlineHelpText>
        <label>Skip if Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field indicates if a step is part of a step stage or not.</inlineHelpText>
        <label>Stage</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Invalid Stage: Stage must belong to the same definition as this Step and not be the same as this Step&apos;s Parent Stage.</errorMessage>
            <filterItems>
                <field>FSTR__PCE_Stage__c.FSTR__Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.FSTR__Definition__c</valueField>
            </filterItems>
            <infoMessage>Stage must belong to the same definition as this Step and not be the same as this Step&apos;s Parent Stage.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipLabel>Steps (Stage)</relationshipLabel>
        <relationshipName>PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Status_Managed_By__c</fullName>
        <label>Status Managed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Creation_Custom_Criteria__c</fullName>
        <label>Step Creation Custom Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Type__c</fullName>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clause Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Stop_Process_if_Status_Set_To__c</fullName>
        <inlineHelpText>This field will override the Ignore in Stage Completion checkbox on child steps if a set in a parent step.  If the Step is set to one of the Status values selected here the process will stop even if the Ignore box is checked on all steps within a stage.</inlineHelpText>
        <label>Stop Process if Status Set To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Subscribe_Platform_Event_Object__c</fullName>
        <label>Subscribe Platform Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Task_Comment__c</fullName>
        <inlineHelpText>Field holds the step text if the object to be created is a task.</inlineHelpText>
        <label>Task Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__User_Field_Name__c</fullName>
        <inlineHelpText>Select a user field from this list and the generated step will be assigned to whatever user is specified in the selected field.</inlineHelpText>
        <label>User Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__User_Field__c</fullName>
        <inlineHelpText>Select a user field from this list and the generated step will be assigned to whatever user is specified in the selected field.</inlineHelpText>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Body__c</fullName>
        <description>This stores the body of the HTTP request. Format should match that specified in the Content-Type header.</description>
        <inlineHelpText>This stores the body of the HTTP request. If including a Body in the request, a Content-Type header should be specified above (i.e. Content-Type:text/json).  The format of body text should match that specified in the header (JSON,XML,etc.).</inlineHelpText>
        <label>Web Service Callout Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Headers__c</fullName>
        <inlineHelpText>If using the Body field, specify at a minimum the Content-Type of the Body (JSON,XML,etc.) 

Format: &apos;HeaderName:HeaderValue&apos; Example - for JSON requests: &apos;Content-Type:text/json&apos;

Separate multiple headers with a semi-colon.</inlineHelpText>
        <label>Web Service Callout Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_Method__c</fullName>
        <inlineHelpText>Specifies the HTTP verb to use for this callout.  If blank, the callout method defaults to &apos;GET&apos;</inlineHelpText>
        <label>Web Service Callout Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>HEAD</fullName>
                </value>
                <value>
                    <fullName>TRACE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout_URL__c</fullName>
        <description>This stores the actual Web Service Callout URL and any query parameters passed to the service.</description>
        <inlineHelpText>This stores the actual Web Service Callout URL and any query parameters passed to the service.</inlineHelpText>
        <label>Web Service Callout URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Web_Service_Callout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this steps calls out to a web service</description>
        <inlineHelpText>Indicates if this steps calls out to a web service</inlineHelpText>
        <label>Web Service Callout</label>
        <type>Checkbox</type>
    </fields>
    <label>Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSTR__assignee_must_be_populated</fullName>
        <active>true</active>
        <description>If the assignee type is set to User then assignee must be populated</description>
        <errorConditionFormula>IF( ISPICKVAL(FSTR__Assignee_Type__c , &apos;User&apos;),  ISBLANK( FSTR__Assignee__c ) ,False)</errorConditionFormula>
        <errorDisplayField>FSTR__Assignee__c</errorDisplayField>
        <errorMessage>If Assignee Type is User then Assignee cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSTR__can_only_have_one_parent</fullName>
        <active>true</active>
        <description>This object can only have no parent or a parent step or parent step stage but not both.</description>
        <errorConditionFormula>IF(AND( FSTR__Parent_Step__c  != &quot;&quot;,  FSTR__Parent_Stage__c  != &quot;&quot;), true, false)</errorConditionFormula>
        <errorDisplayField>FSTR__Parent_Step__c</errorDisplayField>
        <errorMessage>Steps cannot have a parent step and parent step stage, they must have one or the other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSTR__task_cant_be_queue</fullName>
        <active>true</active>
        <description>If the assignee type is set to Queue then the selected object cannot be a task</description>
        <errorConditionFormula>IF( ISPICKVAL(FSTR__Assignee_Type__c , &quot;Queue&quot;),   FSTR__Object_Type_To_Create__c =&quot;task&quot;,False)</errorConditionFormula>
        <errorDisplayField>FSTR__Object_Type_To_Create__c</errorDisplayField>
        <errorMessage>If Assignee Type is Queue then Object Type to create cannot be Task.</errorMessage>
    </validationRules>
</CustomObject>